Squashes a couple bugs in the map editing experience

--- a/css/map.css
+++ b/css/map.css
@@ -3,6 +3,7 @@
 	background-position: center;
 	background-size: cover;
 	background-repeat: no-repeat;
+	margin: 0 0 1em 0;
 }
 
 .ucb-map, .ucb-map.ucb-map-size-small {
